--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   go_router: ^14.7.2
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
